[package]
name = "google-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-prompts = "0.1.0"
dotenv = "0.15.0"
futures = { version = "0.3.30" }
gcp_auth = { version = "0.10.0" }
google-generative-ai-rs = "0.1.7"
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-streams = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = {version = "1.0.108"}
tokio = { version = "1.35.1", features = ["full"] }
